<?xml version="1.0"?>
<package format="2">
  <name>pid</name>
  <version>0.0.1</version>
  <description>Based on the original pid package (URL: http://wiki.ros.org/pid) by Andy Zelenak.</description>

  <maintainer email="bognik3@gmail.com">Nikita Boguslavskii</maintainer>

  <license>BSD</license>

 <url type="website">https://github.com/GOPHER-System-Intergration/gopher-kinova-pid</url>

 <author email="bognik3@gmail.com">Nikita Boguslavskii</author>
 <author>Andy Zelenak</author>
 <author>Paul Bouchier</author>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Use build_depend for packages you need at compile time: -->
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
</package>
